Fix resume menu too small when scrolled up

--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -45,6 +45,7 @@ p {
 }
 
 #resume {
+  width: 100%;
   margin-top: 3em;
   margin-left: 1em;
 }
